can shift to next or prev user stories - but the previous user stories hasn\'t finished and still going in the bckground => bug

--- a/react-app/src/components/Story/Story.css
+++ b/react-app/src/components/Story/Story.css
@@ -51,3 +51,10 @@
 .stories-prev{
   font-size: 30px;
 }
+
+.stories-lineup-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
